--- a/style.css
+++ b/style.css
@@ -1,3 +1,71 @@
 body {
-background-color: red;
+    color: hotpink;
+    background-color: #f5f5f5;
+    font-family: sans-serif;
+    justify-content: center;
+    margin: auto;
+}
+section {
+    width: 50%;
+    margin: auto;
+    border-bottom: 1px solid hotpink;
+}
+
+header {
+    background-color: #d0d4d4;
+    position: fixed;
+    margin: 0;
+    width: 100%;
+    height: 3em;
+}
+.navigation {
+    text-align: right;
+    margin: 0; 
+    padding: 13px; 
+}
+.navigation .nav-list {
+    display: inline; 
+    margin-right: 15px; 
+    padding: 3px; 
+}
+a {
+    color: rgb(249, 88, 168);
+    font-size: medium;
+
+}
+a:hover {
+    color: #666;
+    font-size: large;
+}
+.avatar {
+    margin-top: 55px;
+    border-radius: 100%; 
+    border: 3px solid hotpink; 
+    box-shadow: 0 0 7px #666
+}
+
+footer {
+    background-color: #d0d4d4;
+    position: absolute;
+    margin-bottom: 0;
+    width: 100%;
+    padding: 20px;
+    display: table;  
+    border-spacing: 20px 20px; 
+}
+
+.logo, .git, .year {
+    width: auto;
+}
+.logo {
+    width: 10em;
+    margin-left: 75%;
+
+}
+.rss:hover {
+    font-size: medium;
+}
+div {
+    display: table-cell; 
+    vertical-align: middle;
 }
